--- a/FlightSimulatorReactionTester.FutureEventSetEditor/MainWindow.xaml
+++ b/FlightSimulatorReactionTester.FutureEventSetEditor/MainWindow.xaml
@@ -9,11 +9,6 @@
         Title="MainWindow"
         Height="350"
         Width="525">
-    <Window.Resources>
-        <!--<common:FutureEventSet x:Key="FutureEventSet" />
-        <CollectionViewSource x:Key="FutureEventSetViewSource"
-                              Source="{StaticResource FutureEventSet}" />-->
-    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition />
@@ -24,13 +19,10 @@
                   Margin="2"
                   ItemsSource="{Binding futureEventSet}">
             <DataGrid.Columns>
-                <DataGridComboBoxColumn x:Name="arrowColumn" Width="*" Header="Arrow" SelectedItemBinding="{Binding Arrow}">
-                    <!--<DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Image Source="{Binding Image}" />
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>-->
-                </DataGridComboBoxColumn>
+                <DataGridComboBoxColumn x:Name="arrowColumn"
+                                        Width="*"
+                                        Header="Arrow"
+                                        SelectedItemBinding="{Binding Arrow}" />
                 <local:DataGridNumericColumn Header="Delay [ms]" Width="*" Binding="{Binding Delay}">
                     
                 </local:DataGridNumericColumn>
